--- a/src/components/ScheduledAppointments.css
+++ b/src/components/ScheduledAppointments.css
@@ -1,10 +1,18 @@
-/* Fondo global para toda la página */
 html, body {
     margin: 0;
     padding: 0;
     height: 100%;
     background-color: #d6e2ef;
     font-family: 'Codec Pro', sans-serif;
+}
+
+/* Barra Inferior (meramente estetico) */
+.footer-bar {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    height: 80px;
+    background-color: #336793;
 }
 
 /* Contenedor principal de citas */
