--- a/CODE/frond-is/src/styles/container1.css
+++ b/CODE/frond-is/src/styles/container1.css
@@ -8,25 +8,25 @@
 }
 @font-face {
     font-family: 'Codec Pro';       /* Nombre de la fuente que usarás en CSS */
-    src: url('./fonts/codec-pro/CodecPro-Regular.ttf') format('truetype'); /* Ruta al archivo */
+    src: url('../fonts/codec-pro/CodecPro-Regular.ttf') format('truetype'); /* Ruta al archivo */
     font-weight: normal;
     font-style: normal;
   }
 @font-face {
     font-family: 'Migra';       /* Nombre de la fuente que usarás en CSS */
-    src: url('./fonts/Migra/MigraItalic-ExtraboldItalic.ttf') format('truetype'); /* Ruta al archivo */
+    src: url('../fonts/Migra/MigraItalic-ExtraboldItalic.ttf') format('truetype'); /* Ruta al archivo */
     font-weight: normal;
     font-style: normal;
   }
-.Columna1_1{
+.Column_1{
     display: grid;
     place-items: center;
 }
-.Columna1_2{
+.columna2{
     display: grid;
     grid-template-columns: 1fr 1fr;
     align-items: end;
-    background-image: url(./photos/imgColumna1_2.png);
+    background-image: url(../photos/imgColumna1_2.png);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -43,21 +43,4 @@
     font-size: 45px;
     text-align: center;
     font-family: 'Codec Pro';
-}
-.ButtonOne{
-    background-color: transparent;
-    color: #333;
-    border: 2px solid #336793;
-    font-size: 20px;
-    font-family: Migra;
-    text-transform: uppercase;
-    padding-left: 25px;
-    padding-right: 25px;
-    padding-top: 30px;
-    padding-bottom: 30px;
-    margin: 10px;
-}
-.ButtonOne:hover{
-    background-color: #336793;
-    color: white;
 }
