--- a/src/styles/ButtonOne.css
+++ b/src/styles/ButtonOne.css
@@ -16,8 +16,13 @@
     padding-top: 30vh;
     padding-bottom: 30vh;
     margin: 10vh;
+    cursor: pointer;
 }
 .ButtonOne:hover{
     background-color: #336793;
     color: white;
+}
+
+.ButtonOne:focus{
+    box-shadow: 0 0 5px rgba(6, 7, 8, 0.5);
 }
