Agrega estilos a BrowserDocs

--- a/src/styles/BrowserDoc.css
+++ b/src/styles/BrowserDoc.css
@@ -13,10 +13,25 @@
     font: 'Codec Pro';
     font-size: 20px;
 }
-.FormBrowser input{
+.FormBrowser{
     width: 100%;
     display: grid;
-    grid-template-columns: 2fr 2fr 1fr;
-    place-items: center;
-
+    grid-template-columns: 1fr 1fr auto;
+    align-items: center;
+    margin: 0 auto;
+}
+.FormBrowser input{
+    padding: 0.5rem;
+    border: 2px solid #5387a3;
+}
+.ButtonBrowser{
+    padding: 0.5rem;
+    border: 2px solid #5387a3;
+    background-color: transparent;
+    color: #333;
+}
+.ButtonBrowser:hover{
+    background-color: #336793;
+    color: white;
+    cursor: pointer;
 }
