--- a/src/styles/LoginForms.css
+++ b/src/styles/LoginForms.css
@@ -1,6 +1,6 @@
 @font-face {
-    font-family: 'Codec Pro';
-    src: url('../fonts/codec-pro/CodecPro-Regular.ttf') format('truetype');
+    font-family: "Codec Pro";
+    src: url("../fonts/codec-pro/CodecPro-Regular.ttf") format("truetype");
     font-weight: normal;
     font-style: normal;
   }
@@ -35,7 +35,7 @@
     padding-top: 15%;
     font-size: 100%;
     color: #336793;
-    font: 'Codec Pro';
+    font: "Codec Pro";
 }
 
 .FormLogin input{
