--- a/src/styles/ScheduledAppointments.css
+++ b/src/styles/ScheduledAppointments.css
@@ -3,7 +3,7 @@ html, body {
     padding: 0;
     height: 100%;
     background-color: #d6e2ef;
-    font-family: 'Codec Pro', sans-serif;
+    font-family: "Codec Pro", sans-serif;
 }
 
 /* Barra Inferior (meramente estetico) */
@@ -122,7 +122,7 @@ html, body {
     padding: 8px 15px;
     border-radius: 5px;
     text-transform: uppercase;
-    font-family: 'Migra', sans-serif;
+    font-family: "Migra", sans-serif;
     transition: all 0.3s ease-in-out;
 }
 
