--- a/src/styles/container1.css
+++ b/src/styles/container1.css
@@ -8,13 +8,13 @@
 }
 @font-face {
     font-family: "Codec Pro";
-    src: url("../fonts/codec-pro/CodecPro-Regular.ttf") format("truetype");
+    src: url("../assets/fonts/CodecPro-Regular.ttf") format("truetype");
     font-weight: normal;
     font-style: normal;
   }
 @font-face {
     font-family: "Migra";
-    src: url("../fonts/Migra/MigraItalic-ExtraboldItalic.ttf") format("truetype");
+    src: url("../assets/fonts/MigraItalic-ExtraboldItalic.ttf") format("truetype");
     font-weight: normal;
     font-style: normal;
   }
@@ -26,7 +26,7 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     align-items: end;
-    background-image: url(../photos/imgColumna1_2.png);
+    background-image: url(../assets/images/homePage.png);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
