Fix formatting and typos

--- a/src/styles/BrowserDoc.css
+++ b/src/styles/BrowserDoc.css
@@ -5,32 +5,36 @@
     font-style: normal;
 }
 
-
-.ContainerBrower{
+.ContainerBrowser {
     padding-top: 20%;
 }
-.title{
-    font: "Codec Pro";
+
+.title {
+    font-family: "Codec Pro", serif;
     font-size: 20px;
 }
-.FormBrowser{
+
+.FormBrowser {
     width: 100%;
     display: grid;
     grid-template-columns: 1fr 1fr auto;
     align-items: center;
     margin: 0 auto;
 }
-.FormBrowser input{
+
+.FormBrowser input {
     padding: 0.5rem;
     border: 2px solid #5387a3;
 }
-.ButtonBrowser{
+
+.ButtonBrowser {
     padding: 0.5rem;
     border: 2px solid #5387a3;
     background-color: transparent;
     color: #333;
 }
-.ButtonBrowser:hover{
+
+.ButtonBrowser:hover {
     background-color: #336793;
     color: white;
     cursor: pointer;
