--- a/src/styles/ScheduledAppointments.css
+++ b/src/styles/ScheduledAppointments.css
@@ -6,7 +6,7 @@ html, body {
     font-family: "Codec Pro", sans-serif;
 }
 
-/* Barra Inferior (meramente estetico) */
+/* Barra Inferior (meramente estético) */
 .footer-bar {
     position: fixed;
     bottom: 0;
