--- a/src/styles/LoginForms.css
+++ b/src/styles/LoginForms.css
@@ -3,16 +3,16 @@
     src: url("../assets/fonts/CodecPro-Regular.ttf") format("truetype");
     font-weight: normal;
     font-style: normal;
-  }
+}
 
-.ContainerG{
+.ContainerG {
     display: grid;
     place-items: center;
     height: 100vh;
     background-color: #d6e2ef;
 }
 
-.ContainerLogin{
+.ContainerLogin {
     display: grid;
     place-items: center;
     background-color: #ffffff;
@@ -25,20 +25,20 @@
     width: 45%;
 }
 
-.FormLogin{
+.FormLogin {
     display: grid;
     place-items: center;
     grid-template-rows: 1fr 1fr;
 }
 
-.FormLogin label{
+.FormLogin label {
     padding-top: 15%;
     font-size: 100%;
     color: #336793;
-    font: "Codec Pro";
+    font-family: "Codec Pro", serif;
 }
 
-.FormLogin input{
+.FormLogin input {
     width: 100%;
     display: grid;
     place-items: center;
@@ -52,6 +52,6 @@
     transition: border-color 0.3s ease;
 }
 
-.FormLogin input:hover{
+.FormLogin input:hover {
     background-color: #3368933b;
 }
