--- a/src/styles/ScheduledAppointments.css
+++ b/src/styles/ScheduledAppointments.css
@@ -32,7 +32,7 @@ html, body {
 }
 
 /* Subtítulo de citas */
-.subWelcome {
+.sub-welcome {
     color: #202020;
     font-size: 45px;
     text-align: center;
