--- a/src/styles/HomePage.css
+++ b/src/styles/HomePage.css
@@ -1,4 +1,4 @@
-.Container1 {
+.home-page {
     position: fixed;
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -21,12 +21,12 @@
     font-style: normal;
 }
 
-.Column_1 {
+.home-page-col-1 {
     display: grid;
     place-items: center;
 }
 
-.columna2 {
+.home-page-col-2 {
     display: grid;
     grid-template-columns: 1fr 1fr;
     align-items: end;
@@ -43,7 +43,7 @@
     font-family: "Codec Pro", serif;
 }
 
-.subWelcome {
+.sub-welcome {
     color: #202020;
     font-size: 45px;
     text-align: center;
