--- a/src/styles/ScheduledAppointments.css
+++ b/src/styles/ScheduledAppointments.css
@@ -113,7 +113,7 @@ html, body {
 }
 
 /* Estilo del botón cancelar dentro del horario */
-.time-slot-content .ButtonOne {
+.time-slot-content .nav-button {
     margin-top: 0;
     background-color: transparent;
     color: #336793;
@@ -126,7 +126,7 @@ html, body {
     transition: all 0.3s ease-in-out;
 }
 
-.time-slot-content .ButtonOne:hover {
+.time-slot-content .nav-button:hover {
     background-color: #336793;
     color: white;
     transform: scale(1.05);
