--- a/src/styles/LoginForm.css
+++ b/src/styles/LoginForm.css
@@ -5,14 +5,14 @@
     font-style: normal;
 }
 
-.ContainerG {
+.login-container {
     display: grid;
     place-items: center;
     height: 100vh;
     background-color: #d6e2ef;
 }
 
-.ContainerLogin {
+.login-div {
     display: grid;
     place-items: center;
     background-color: #ffffff;
@@ -25,20 +25,20 @@
     width: 45%;
 }
 
-.FormLogin {
+.login-form {
     display: grid;
     place-items: center;
     grid-template-rows: 1fr 1fr;
 }
 
-.FormLogin label {
+.login-form label {
     padding-top: 15%;
     font-size: 100%;
     color: #336793;
     font-family: "Codec Pro", serif;
 }
 
-.FormLogin input {
+.login-form input {
     width: 100%;
     display: grid;
     place-items: center;
@@ -52,6 +52,6 @@
     transition: border-color 0.3s ease;
 }
 
-.FormLogin input:hover {
+.login-form input:hover {
     background-color: #3368933b;
 }
