--- a/src/styles/PatientHome.css
+++ b/src/styles/PatientHome.css
@@ -112,21 +112,25 @@ html, body {
     gap: 10px;
 }
 
-/* Estilo del botón cancelar dentro del horario */
-.time-slot-content .nav-button {
+.cancel-button:focus {
+    box-shadow: 0 0 5px rgba(6, 7, 8, 0.5);
+}
+
+.cancel-button {
     margin-top: 0;
     background-color: transparent;
     color: #336793;
     border: 2px solid #336793;
     font-size: 14px;
-    padding: 8px 15px;
+    padding: 8px;
     border-radius: 5px;
     text-transform: uppercase;
     font-family: "Migra", sans-serif;
     transition: all 0.3s ease-in-out;
+    cursor: pointer;
 }
 
-.time-slot-content .nav-button:hover {
+.cancel-button:hover {
     background-color: #336793;
     color: white;
     transform: scale(1.05);
@@ -161,6 +165,7 @@ html, body {
     max-width: 100%;
     height: auto;
     word-wrap: break-word;
+    gap: 10px;
 }
 
 .appointment p {
