Add new appointment page

--- a/src/styles/NavButton.css
+++ b/src/styles/NavButton.css
@@ -13,7 +13,7 @@
     font-family: Migra, cursive;
     text-transform: uppercase;
     padding: 1em;
-    margin: 10vh;
+    margin: 1em;
     cursor: pointer;
 }
 
