--- a/src/styles/MedicSchedulePage.css
+++ b/src/styles/MedicSchedulePage.css
@@ -35,7 +35,7 @@
     padding: 1em;
     margin: 1em;
     cursor: pointer;
-    position: fixed;
+    position: absolute;
     top: 10px;
     right: 10px;
 }
