Mark some slots as already saved

--- a/src/styles/MedicSchedulePage.css
+++ b/src/styles/MedicSchedulePage.css
@@ -30,6 +30,16 @@
     color: black;
 }
 
+.time-slot.saved {
+    background-color: #336793;
+    color: white;
+}
+
+.time-slot.saved.locked {
+    background-color: gold;
+    color: black;
+}
+
 .save-changes-button {
     background-color: transparent;
     color: #333;
